# poetry-test-project

./: pyproject.toml
src/poetry_test_project/: __init__.py  config.py  config.yml  data.parquet
submodule/: pyproject.toml
submodule/src/submodule/: http.py
tests/: test_config.py
utils/: pyproject.toml
utils/src/utils/: pq.py
