[tool.poetry]
name = "poetry-test-project-submodule"
version = "0.1.0"
description = ""
authors = ["si0005hp <si0005hp@gmail.com>"]
readme = "README.md"
packages = [{include = "submodule", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
