[tool.poetry]
name = "utils"
version = "0.1.0"
description = ""
authors = ["si0005hp <si0005hp@gmail.com>"]
readme = "README.md"
packages = [{include = "utils", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
pyarrow = "^12.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
